_install/ingress/ingress-solr.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: solr-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: word-solr.localhost.com
    http:
      paths:
        - path: /
          backend:
            serviceName: word-solr-headless
            servicePort: 8983
